--- a/student-service/src/main/resources/application.yml
+++ b/student-service/src/main/resources/application.yml
@@ -1,5 +1,22 @@
+server:
+  port: 8083
+
 spring:
-  application:
-    name: student-service
   datasource:
-    url:
+    url: jdbc:postgresql://127.0.0.1:5433/student_db
+    username: mwas
+    password: root
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+      format_sql: true
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+rest:
+  template:
+    connect-timeout: 10000
+    read-timeout: 10000
